--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
         distribution: 'temurin'
         
     - name: Build with Gradle
-      run: /.gradlew clean build
+      run: ./gradlew clean build
       shell: bash
 
     - name: SCP Files
