--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         
+    - name: gradlew permission
+      run: chmod +x ./gradlew
+      
     - name: Build with Gradle
       run: ./gradlew clean build
       shell: bash
