--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,19 +13,16 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# permissions:
-#   contents: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     
-    - name: Set up JDK 11
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '8'
         distribution: 'temurin'
         
     - name: gradlew permission
@@ -38,10 +35,10 @@ jobs:
     - name: SCP Files
       uses: appleboy/scp-action@v0.0.1
       with:
-        host: $({secrets.REMOTE_IP})
-        username: $({secrets.REMOTE_SSH_USERNAME})
-        key: $({secrets.REMOTE_SSH_KEY})
-        port: $({secrets.REMOTE_SSH_PORT})
+        host: ${{secrets.REMOTE_IP}}
+        username: ${{secrets.REMOTE_SSH_USERNAME}}
+        key: ${{secrets.REMOTE_SSH_KEY}}
+        port: ${{secrets.REMOTE_SSH_PORT}}
         source: "./build/libs/*.jar"
         target: "/opt/spring/library-management/"
         
