--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,6 +41,7 @@ jobs:
         port: ${{secrets.REMOTE_SSH_PORT}}
         source: "./build/libs/*.jar"
         target: "/opt/spring/library-management/"
+        strip_components: 2
         
           
       
