--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
       shell: bash
 
     - name: SCP Files
-      uses: appleboy/scp-action@v0.0.1
+      uses: appleboy/scp-action@master
       with:
         host: ${{secrets.REMOTE_IP}}
         username: ${{secrets.REMOTE_SSH_USERNAME}}
