--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,9 +32,6 @@ jobs:
       run: ./gradlew clean build
       shell: bash
 
-    - name: Build Test
-      run: ls -al ./build/libs
-      
     - name: SCP Files
       uses: appleboy/scp-action@master
       with:
@@ -43,7 +40,7 @@ jobs:
         key: ${{secrets.REMOTE_SSH_KEY}}
         port: ${{secrets.REMOTE_SSH_PORT}}
         source: "./build/libs/*.jar"
-        target: "/home/ec2-user/"
+        target: "/opt/spring/library-management/"
         strip_components: 2
         
           
