--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -42,6 +42,12 @@ jobs:
         source: "./build/libs/*.jar"
         target: "/opt/spring/library-management/"
         strip_components: 2
-        
-          
-      
+
+    - name: script run
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{secrets.REMOTE_IP}}
+        username: ${{secrets.REMOTE_SSH_USERNAME}}
+        key: ${{secrets.REMOTE_SSH_KEY}}
+        port: ${{secrets.REMOTE_SSH_PORT}}
+        script: sh /opt/spring/library-management/script/run.sh
